// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Title Component should match snapshot 1`] = `
.c0 {
  display: block;
  font-size: 24px;
  font-weight: 500;
  color: #303030;
  font-family: "Red Hat Display",sans-serif;
  margin: 0 0 0.5rem;
}

<h2
  className="c0"
/>
`;

exports[`Title Component should match snapshot with darkTheme 1`] = `
.c0 {
  display: block;
  font-size: 24px;
  font-weight: 500;
  color: #E0E0E0;
  font-family: "Red Hat Display",sans-serif;
  margin: 0 0 0.5rem;
}

<h2
  className="c0"
/>
`;

exports[`Title Component should match snapshot with lightTheme 1`] = `
.c0 {
  display: block;
  font-size: 24px;
  font-weight: 500;
  color: #303030;
  font-family: "Red Hat Display",sans-serif;
  margin: 0 0 0.5rem;
}

<h2
  className="c0"
/>
`;
